.archive/kubernetes/sealed-secrets/app/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: sealed-secrets
  namespace: kube-system
spec:
  parentRefs:
    - name: envoy-external
      namespace: network-system
      sectionName: https
    - name: envoy-internal
      namespace: network-system
      sectionName: https
  hostnames:
    - 'sealed-secrets.${CLUSTER_DOMAIN}'
  rules:
    - backendRefs:
        - name: sealed-secrets
          port: 8080
          weight: 100
